# learning_rust

01_hello_cargo/src/: main.rs
03_farenheit_to_celsius/src/: main.rs
07_slices/src/: main.rs
08_structure/src/: main.rs
0_hello_world/: main
10_enumerations/src/: main.rs
11_coins/src/: main.rs
12_options/src/: main.rs
14_restaurant/src/: back_of_house.rs  lib.rs
15_vector/src/: main.rs
16_strings/src/: main.rs
17_hashmaps/src/: main.rs
18_statistics/: Cargo.toml
18_statistics/src/: main.rs
19_pig_latin/src/: main.rs
20_company/src/: main.rs
21_error_handling/src/: main.rs
22_generics/src/: main.rs
23_traits_summarize_content/: Cargo.toml
23_traits_summarize_content/src/: main.rs
24_lifetimes/src/: main.rs
25_adder/src/: lib.rs
25_adder/tests/: common.rs  integration_tests.rs
26_minigrep/src/: lib.rs  main.rs
27_t_shirt_company/src/: main.rs
28_closures/src/: main.rs
29_iterators/src/: lib.rs
2_guessing_game/src/: main.rs
30_minigrep_improvment/src/: lib.rs  main.rs
31_art/: Cargo.toml
31_art/art/: Cargo.toml
31_art/named_color/: Cargo.toml
31_art/src/: lib.rs  main.rs
32_workspace/: Cargo.toml
33_deref/src/: main.rs
34_drop/src/: main.rs
35_rc_pointer/src/: main.rs
36_refcell/src/: lib.rs
37_rc_with_refcell/: Cargo.toml
37_rc_with_refcell/src/: main.rs
38_tail/src/: main.rs
47_pattern_ignoring/: Cargo.toml
48_lets_get_unsafe/: Cargo.toml
52_hello_macro/: Cargo.toml
52_hello_macro/pancakes/: Cargo.toml
52_hello_macro/pancakes/src/: main.rs
53_my_server/: 404.html  index.html
(+41 files in other folders)
